Ajuste no arquivo de requerimentos

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,5 @@
-
----
-
-## 3️⃣ requirements.txt – versão correta e final
-
-Este ficheiro está **100% alinhado com o Projeto.txt**:
-
-```txt
-geoip2
-maxminddb
-cryptography
-reportlab
+## requirements.txt 
+pip install cryptography
+pip install geoip2 maxminddb
+pip install reportlab
 
